# talos_wbc_wrapper

./: CMakeLists.txt  package.xml  talos_wbc_wrapper.xml
include/talos_wbc_wrapper/: wbc_action.h
src/: talos_wbc_wrapper_plugins.cpp  wbc_action.cpp  wbc_action_node.cpp  wbc_plugin.cpp
