<?xml version="1.0"?>
<package format="2">
  <name>talos_wbc_wrapper</name>
  <version>0.0.1</version>
  <description>The talos wbc package for gui</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sanghyun.kim@ed.ac.uk">Sanghyun Kim</maintainer>
  <author email="sanghyun.kim@ed.ac.uk">Sanghyun Kim</author>
 

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pal_locomotion</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>pal_talos_walk_impl</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <pal_locomotion plugin="${prefix}/talos_wbc_wrapper.xml" />
  </export>
</package>
